test_data/end_to_end/err__use_wildcard_on_non_module/stderr.txt
error: expected module
  --> main.cz:7:5
7 | use S::*;
        ~

error: expected module
  --> main.cz:8:9
8 | use m1::S::*;
            ~
